--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
 
   <div class="grid">
-    <div class="unit xs-1">
+    <div class="unit xs-1 l-1-3">
       <img class="img-flex" src="images/veggie-burger-1.jpg" alt="">
       <p class="soft">Soft veggie burger with onion, romaine, tomato, mustard and vegan cheese.</p>
     </div>
 
-    <div class="unit xs-1">
+    <div class="unit xs-1 l-1-3">
       <img class="img-flex" src="images/veggie-burger-2.jpg" alt="">
       <p class="traditional">Traditional veggie burger on a whole grain bun topped with sprouts.</p>
     </div>
 
-    <div class="unit xs-0">
+    <div class="unit xs-0 l-1-3">
       <img class="img-flex" src="images/veggie-burger-3.jpg" alt="">
       <p class="bean">Black bean burger with onion & lettuce, surrounded by an oat bun.</p>
     </div>
