--- a/index.html
+++ b/index.html
@@ -11,21 +11,27 @@
 <body>
 
   <div class="grid">
-    <div class="unit xs-1 l-1-3">
-      <img class="img-flex" src="images/veggie-burger-1.jpg" alt="">
-      <p class="soft">Soft veggie burger with onion, romaine, tomato, mustard and vegan cheese.</p>
+    <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3">
+      <figure>
+        <img class="img-flex" src="images/veggie-burger-1.jpg" alt="">
+        <figcaption>Soft veggie burger with onion, romaine, tomato, mustard and vegan cheese.</figcaption>
+      </figure>
     </div>
 
-    <div class="unit xs-1 l-1-3">
-      <img class="img-flex" src="images/veggie-burger-2.jpg" alt="">
-      <p class="traditional">Traditional veggie burger on a whole grain bun topped with sprouts.</p>
-    </div>
+      <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3">
+        <figure>
+          <img class="img-flex" src="images/veggie-burger-2.jpg" alt="">
+          <figcaption>Traditional veggie burger on a whole grain bun topped with sprouts.</figcaption>
+        </figure>
+      </div>
 
-    <div class="unit xs-0 l-1-3">
-      <img class="img-flex" src="images/veggie-burger-3.jpg" alt="">
-      <p class="bean">Black bean burger with onion & lettuce, surrounded by an oat bun.</p>
-    </div>
-  </div>
+        <div class="unit xs-0 s-0 m-0 l-1-3 xl-1-3">
+          <figure>
+            <img class="img-flex" src="images/veggie-burger-3.jpg" alt="">
+            <figcaption>Black bean burger with onion & lettuce, surrounded by an oat bun.</figcaption>
+          </figure>
+        </div>
+      </div>
 
 </body>
 </html>
